# CocktailClient

./: README.md  pyproject.toml
CocktailClient/: client_httpx.py  client_requests.py  client_uplink.py
