[tool.poetry]
name = "cocktailclient"
version = "0.1.0"
description = ""
authors = ["Jessica Louis <jrlouis94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uplink = "^0.9.7"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
